kubernetes/picspy-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: picspy
  labels:
    name: picspy
