kubernetes/picspy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picspy
  labels:
    app: picspy
  namespace: picspy
spec:
  selector:
    matchLabels:
      app: picspy
  template:
    metadata:
      labels:
        app: picspy
    spec:
      imagePullSecrets:
        - name: vagahbond-registry-creds

      
      containers:
      - name: picspy-front
        image: registry.qtmsheep.com/vagahbond/picspy/frontend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      - name: picspy-api
        image: registry.qtmsheep.com/vagahbond/picspy/api:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
      - name: picspy-mongo
        image: mongo:4.2.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: picspy-data
      - name: picspy-minio
        image: minio/minio
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
        volumeMounts:
            - mountPath: /data
              name: picspy-minio
        livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9000/minio/health/live
      - name: picspy-godbox
        image: quantumsheep/godbox:2
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: true
      volumes:

          - name: picspy-minio
            persistentVolumeClaim:
              claimName: picspy-minio

          - name: picspy-data
            persistentVolumeClaim:
              claimName: picspy-data
