kubernetes/minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-operator
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "minio.picspy.vagahbond.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operator
                port:
                  number: 4222
