kubernetes/picspy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picspy-ingress
  namespace: picspy
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "picspy.vagahbond.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: picspy-service
                port:
                  number: 3080
    - host: "api.picspy.vagahbond.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: picspy-service
                port:
                  number: 3000
    - host: "minio.picspy.vagahbond.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: picspy-service
                port:
                  number: 9000
